--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
   "license": "BSD-3-Clause",
   "main": "index.js",
   "description": "The better Golang test coverage report than 'go tool cover'",
-  "files": ["bin"]
+  "files": ["bin", "templates"]
 }
